tests/baselines/reference/functionOverloads5.errors.txt
==== tests/cases/compiler/functionOverloads5.ts (1 errors) ====
    class baz { 
      public foo();
      ~~~~~~~~~~~~~
!!! functionOverloads5.ts(2,3): error TS2150: Overload signatures must all be public or private.
      private foo(bar?:any){ }
    }
    